objects/GLS_Licence__c.object
<CustomObject>
    <description>Construction Assist: Licence data populated via GLS</description>
    <fields>
        <fullName>GLS_expiryDate__c</fullName>
        <description>Construction Assist:</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLS_startDate__c</fullName>
        <description>DFSI - Construct Assist</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to relate the licence to an Insurer account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licences</relationshipLabel>
        <relationshipName>Licences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is automatically updated by Process Builder when an Insurer Review Process is Approved and set to Stop. This flag will be used to activate a Licence at its Start Date.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Full_Conditional__c</fullName>
        <description>Identifies the type of insurer licences</description>
        <label>Full/Conditional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Licence_Group__c</fullName>
        <label>Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Industry</fullName>
                </value>
                <value>
                    <fullName>Registry Services</fullName>
                </value>
                <value>
                    <fullName>Workplace Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <description>Identifies the status of an Insurer Licence</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective</fullName>
                    <default>true</default>
                    <label>Prospective</label>
                </value>
                <value>
                    <fullName>Principal Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Term_Units__c</fullName>
        <label>Term (Units)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IPM_Insurer_Licence_Term_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Term__c</fullName>
        <description>Used for IPM to describe the term of the insurer licence</description>
        <label>Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IPM_Licence_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Insurer - Single</fullName>
                </value>
                <value>
                    <fullName>Self Insurer - Group</fullName>
                </value>
                <value>
                    <fullName>Specialised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Licence</label>
    <nameField>
        <label>Licence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>